# Simple_NN_Project

./: .gitignore  CMakeLists.txt  README.md  TEST  imgui.ini  main.cpp
include/: ImguiMenu.h  cleaner.h  dataPoint.h  global.h  media.h  mediaController.h  screenGeometry.h  screenObject.h  screenTexture.h
include/NeuralNetwork/: layer.h  neuralNetwork.h
src/: ImguiMenu.cpp  cleaner.cpp  dataPoint.cpp  media.cpp  mediaController.cpp  screenGeometry.cpp  screenTexture.cpp
src/NeuralNetwork/: layer.cpp  neuralNetwork.cpp
